--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="sms_parser_settings_title">Автоматическое распознавание SMS</string>
     <string name="sms_parser_settings_summary">При поступлении SMS со списком покупок будет автоматически запускаться приложение и заполняться полученным списком.</string>
     <string name="pref_enable_acra">Отправлять отчеты об ошибках</string>
-    <string name="pref_enable_acra_summary">При возникновении ошибок в работе программы будет автоматичеси отправляться АНОНИМНЫЙ отчет с отладочной информацией.</string>
+    <string name="pref_enable_acra_summary">При возникновении ошибок в работе программы будет автоматичеси отправляться анонимный отчет с отладочной информацией.</string>
     <string name="added">"Добавлено: "</string>
+    <string name="sort">Сортировка</string>
 </resources>
