--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,14 @@
     <string name="sms_parser_settings_summary">При поступлении SMS со списком покупок будет автоматически запускаться приложение и заполняться полученным списком.</string>
     <string name="pref_enable_acra">Отправлять отчеты об ошибках</string>
     <string name="pref_enable_acra_summary">При возникновении ошибок в работе программы будет автоматичеси отправляться анонимный отчет с отладочной информацией.</string>
-    <string name="added">"Добавлено: "</string>
+    <string name="added">Добавлено:</string>
     <string name="sort">Сортировка</string>
+    <string name="font_size">Размер шрифта</string>
+    <string name="save">Сохранить</string>
+    <string name="list_sort_alphabetical">Сортировать список по алфавиту</string>
+    <string name="list_sort_alphabetical_summary">По умолчанию сортировка списка осуществляется по порядку добавления.</string>
+    <string name="background_color">Цвет фона</string>
+    <string name="view_settings">Внешний вид</string>
+    <string name="font_size_summary">Размер шрифта в списке покупок.\nЗначение по умолчанию - 18</string>
+    <string name="color_picker_summary">Цвет фона списка покупок.</string>
 </resources>
