--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="main">Основные</string>
     <string name="more">Дополнительно</string>
     <string name="sms_parser_settings_title">Автоматическое распознавание SMS</string>
-    <string name="sms_parser_settings_summary">При поступлении SMS со списком покупок будет автоматически запускаться приложение и заполняться полученным списком.</string>
+    <string name="sms_parser_settings_summary">При получении SMS со списком покупок будет автоматически запускаться приложение и заполняться полученным списком.</string>
     <string name="pref_enable_acra">Отправлять отчеты об ошибках</string>
     <string name="pref_enable_acra_summary">При возникновении ошибок в работе программы будет автоматичеси отправляться анонимный отчет с отладочной информацией.</string>
     <string name="added">Добавлено:</string>
@@ -44,4 +44,6 @@
     <string name="font_color_summary">Цвет шрифта в списке покупок.</string>
     <string name="background_transparency">Прозрачность фона</string>
     <string name="background_transparency_summary">Прозрачность фона списка покупок.\nЗначение по умолчанию - 90%</string>
+    <string name="minimize_autostart_title">Автозапуск в свернутом виде</string>
+    <string name="minimize_autostart_summary">При получении SMS со списком покупок окно приложения будет запускаться в свернутом виде.</string>
 </resources>
